--- a/style.css
+++ b/style.css
@@ -263,6 +263,9 @@ font-weight: 600;
       flex-direction: column;
       align-items: center;
   }
+  .sec_head{
+      padding-top: 24px;
+  }
  /****************** Conversational section start ******************/
 
  .Conversational_section{
