--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ font-weight: 600;
       align-items: center;
   }
   .sec_head{
-      padding-top: 24px;
+      margin-top: 24px;
   }
  /****************** Conversational section start ******************/
 
