--- a/style.css
+++ b/style.css
@@ -263,9 +263,7 @@ font-weight: 600;
       flex-direction: column;
       align-items: center;
   }
-  .sec_head{
-      margin-top: 24px;
-  }
+  
  /****************** Conversational section start ******************/
 
  .Conversational_section{
@@ -1165,6 +1163,9 @@ section{
 .images_box{
     width:100%;
     margin-bottom: 36px;
+}
+.sec_head{
+    padding-top: 24px;
 }
 /***********   Table start  ************/
 .table thead{
