--- a/style.css
+++ b/style.css
@@ -1097,7 +1097,7 @@ element.style {
 }
 .footer_mainpara{
     font-size: 14px;
-    justify-content: space-around;
+    width: 100%;
 }
 
 .taking_heading{
